# cdx-web-scan

./: .dockerignore  .env.example  .gitignore  100.105.225.198+2-key.pem  100.105.225.198+2.pem  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  linux.env  main.py  pyproject.toml  windows.env
cdx_web_scan/: __init__.py  models.py
cdx_web_scan/error_pages/: handlers.py
cdx_web_scan/static/: app.js  manifest.webmanifest  service-worker.js  styles.css
cdx_web_scan/templates/: base.html  batch_fragment.html  index.html  oob_update_fragment.html  scan_result_fragment.html  submit_result_fragment.html
cdx_web_scan/web_scan/: forms.py  views.py
deploy/: nginx.conf
docs/: .$cdx-web-scan-erd.drawio.bkp  cdx-web-scan-erd.drawio  roadmap.md
tests/: conftest.py  test_db.py  test_smoke.py
