[project]
name = "cdx-web-scan"
version = "0.1.0"
description = "Internal Intake & Scan Application (PWA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.2.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
